apps/oxlint/src/snapshots/fixtures__jsonc_config_auto_detection_test.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: test.js
working directory: fixtures/jsonc_config_auto_detection
----------

  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[test.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file using 1 threads.
----------
CLI result: LintFoundErrors
----------
