apps/oxlint/src/snapshots/fixtures__jsonc_nested_config_.@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: .
working directory: fixtures/jsonc_nested_config
----------

  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[root.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-console.html\eslint(no-console)]8;;\: Unexpected console statement.
   ,-[subdir/nested.js:1:1]
 1 | console.log("test");
   : ^^^^^^^^^^^
   `----
  help: Delete this console statement.

Found 0 warnings and 2 errors.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: LintFoundErrors
----------
