apps/oxlint/src/snapshots/fixtures__linter_--list-files@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --list-files
working directory: fixtures/linter
----------
<cwd>/fixtures/linter/debugger.js
<cwd>/fixtures/linter/js_as_jsx.js
<cwd>/fixtures/linter/nan.js
----------
CLI result: None
----------
