apps/oxlint/src/snapshots/fixtures__list_files_nested_--list-files --config=oxlint.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --list-files --config=oxlint.json
working directory: fixtures/list_files_nested
----------
<cwd>/fixtures/list_files_nested/a/b/one.js
<cwd>/fixtures/list_files_nested/a/b/two.ts
<cwd>/fixtures/list_files_nested/d/e/f.js
<cwd>/fixtures/list_files_nested/top.js
----------
CLI result: None
----------
